--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,14 +1,241 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_game"
     tools:context=".ui.game.GameFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <View
+        android:id="@+id/vHeaderGame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="50dp"
+        android:background="#323234"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/imgGameHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/aviator"
+        app:layout_constraintBottom_toBottomOf="@+id/vHeaderGame"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/vHeaderGame" />
+
+    <TextView
+        android:id="@+id/tvHeaderRules"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/rubik"
+        android:padding="16dp"
+        android:text="@string/txt_rules"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/vHeaderGame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/vHeaderGame" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvHeaderGame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vHeaderGame"
+        tools:listitem="@layout/item_bet_header" />
+
+    <View
+        android:id="@+id/vGameCenter"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_label_game"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvHeaderGame" />
+
+    <TextView
+        android:id="@+id/tvRacePoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/sticknobills"
+        android:text="@string/_4_60x"
+        android:textColor="#2BA90A"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/vGameCenter"
+        app:layout_constraintEnd_toEndOf="@+id/vGameCenter"
+        app:layout_constraintStart_toStartOf="@+id/vGameCenter"
+        app:layout_constraintTop_toTopOf="@+id/vGameCenter" />
+
+    <ImageView
+        android:id="@+id/imgPlan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/plan"
+        app:layout_constraintEnd_toEndOf="@+id/vGameCenter"
+        app:layout_constraintTop_toBottomOf="@+id/rvHeaderGame" />
+
+    <View
+        android:id="@+id/vRace"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_race_center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vGameCenter" />
+
+    <TextView
+        android:id="@+id/tvTotalRace"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/rubikbold"
+        android:gravity="center"
+        android:text="@string/_1_00"
+        android:textColor="@color/white"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/vRace"
+        app:layout_constraintEnd_toStartOf="@+id/btnRaceMinus"
+        app:layout_constraintStart_toStartOf="@+id/vRace"
+        app:layout_constraintTop_toTopOf="@+id/vRace" />
+
+    <ImageView
+        android:id="@+id/btnRacePlus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:src="@drawable/btn_plus"
+        app:layout_constraintBottom_toBottomOf="@+id/vRace"
+        app:layout_constraintEnd_toEndOf="@+id/vRace"
+        app:layout_constraintTop_toTopOf="@+id/vRace" />
+
+    <ImageView
+        android:id="@+id/btnRaceMinus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:src="@drawable/btn_minus"
+        app:layout_constraintBottom_toBottomOf="@+id/btnRacePlus"
+        app:layout_constraintEnd_toStartOf="@+id/btnRacePlus"
+        app:layout_constraintTop_toTopOf="@+id/btnRacePlus" />
+
+    <TextView
+        android:id="@+id/tvRaceInstance1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/bg_btn_silver"
+        android:fontFamily="@font/rubik"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/_1_0"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/tvRaceInstance2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vRace" />
+
+    <TextView
+        android:id="@+id/tvRaceInstance2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_btn_silver"
+        android:fontFamily="@font/rubik"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/_2_0"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tvRaceInstance1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvRaceInstance1"
+        app:layout_constraintTop_toTopOf="@+id/tvRaceInstance1" />
+
+    <TextView
+        android:id="@+id/tvRaceInstance4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/bg_btn_silver"
+        android:fontFamily="@font/rubik"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/_4_0"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/tvRaceInstance5"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvRaceInstance1" />
+
+    <TextView
+        android:id="@+id/tvRaceInstance5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_btn_silver"
+        android:fontFamily="@font/rubik"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/_5_0"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tvRaceInstance4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvRaceInstance4"
+        app:layout_constraintTop_toTopOf="@+id/tvRaceInstance4" />
+
+    <TextView
+        android:id="@+id/tvGameStart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/bg_btn_start"
+        android:fontFamily="@font/rubik"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/gamed"
+        android:textColor="@color/white"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvRaceInstance4" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
