--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -103,9 +104,19 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/plan"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/vGameCenter"
         app:layout_constraintTop_toBottomOf="@+id/rvHeaderGame" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_rawRes="@raw/plane"
+        app:layout_constraintBottom_toBottomOf="@+id/imgPlan"
+        app:layout_constraintEnd_toEndOf="@+id/imgPlan"
+        app:layout_constraintStart_toStartOf="@+id/imgPlan"
+        app:layout_constraintTop_toTopOf="@+id/imgPlan" />
     <View
         android:id="@+id/vRace"
         android:layout_width="match_parent"
