--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -55,11 +55,13 @@
     <View
         android:id="@+id/vGameCenter"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/bg_label_game"
+        app:layout_constraintBottom_toTopOf="@+id/vRace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,11 +76,11 @@
         android:textColor="#2BA90A"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tvGameLost"
+        app:layout_constraintBottom_toBottomOf="@+id/vGameCenter"
         app:layout_constraintEnd_toEndOf="@+id/vGameCenter"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/vGameCenter"
-        app:layout_constraintTop_toBottomOf="@+id/rvHeaderGame"
+        app:layout_constraintTop_toTopOf="@+id/vGameCenter"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
@@ -112,22 +114,22 @@
         android:id="@+id/animation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:lottie_rawRes="@raw/plane"
-        app:layout_constraintBottom_toBottomOf="@+id/imgPlan"
         app:layout_constraintEnd_toEndOf="@+id/imgPlan"
         app:layout_constraintStart_toStartOf="@+id/imgPlan"
-        app:layout_constraintTop_toTopOf="@+id/imgPlan" />
+        app:layout_constraintTop_toTopOf="@+id/vGameCenter"
+        app:lottie_rawRes="@raw/plane" />
+
     <View
         android:id="@+id/vRace"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/bg_race_center"
+        app:layout_constraintBottom_toTopOf="@+id/tvRaceInstance1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vGameCenter" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvTotalRace"
@@ -171,20 +173,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_btn_silver"
         android:fontFamily="@font/rubik"
         android:gravity="center"
-        android:paddingVertical="12dp"
+        android:paddingVertical="5dp"
         android:text="@string/_1_0"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvRaceInstance4"
         app:layout_constraintEnd_toStartOf="@+id/tvRaceInstance2"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vRace" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvRaceInstance2"
@@ -195,7 +197,7 @@
         android:background="@drawable/bg_btn_silver"
         android:fontFamily="@font/rubik"
         android:gravity="center"
-        android:paddingVertical="12dp"
+        android:paddingVertical="5dp"
         android:text="@string/_2_0"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -211,20 +213,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/bg_btn_silver"
         android:fontFamily="@font/rubik"
         android:gravity="center"
-        android:paddingVertical="12dp"
+        android:paddingVertical="5dp"
         android:text="@string/_4_0"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvGameStart"
         app:layout_constraintEnd_toStartOf="@+id/tvRaceInstance5"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvRaceInstance1" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvRaceInstance5"
@@ -235,7 +237,7 @@
         android:background="@drawable/bg_btn_silver"
         android:fontFamily="@font/rubik"
         android:gravity="center"
-        android:paddingVertical="12dp"
+        android:paddingVertical="5dp"
         android:text="@string/_5_0"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -256,7 +258,7 @@
         android:background="@drawable/bg_dialog_win"
         android:orientation="vertical"
         android:padding="20dp"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tvGameStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -286,9 +288,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_btn_start"
         android:fontFamily="@font/rubik"
         android:gravity="center"
@@ -299,8 +300,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvRaceInstance4" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
